# fin-data-lab

./: .env.example  .gitignore  README.md  data_structure.md  debug_itau_data.py  debug_itau_multimercado.py  debug_table.py  pyproject.toml  run_pipeline.py  test_allocators_debug.py
.agent/workflows/: implementation_plan.md
api/: README.md  cache.py  check_schema.py  debug_compare.py  debug_dates.py  debug_metrics_query.py  debug_simple.py  main.py  models.py  service.py  test_api.py  test_fix.py
api_2/: README.md  __init__.py  config.py  dependencies.py  main.py
cache/: .gitkeep
common/: cache.py  postgresql.py
data/: calcular_fluxo_veiculos.py  calcular_fluxo_veiculos_v2.py  check_metrics.py  cliente_segmentado.py  create_allocator_tables.py  create_indexes.py  cvm.cadastro_update.py  cvm_cadastro copy.ipynb  cvm_cadastro.ipynb  cvm_cadastro_fix.ipynb  cvm_depara_gestores.ipynb  generate_cache_jsons.py  gestores.md  indices_cotas.py  montar_views copy.ipynb  montar_views.ipynb  populate_depara_gestores.py  project_metrics.ipynb  project_metrics.py  project_metrics2.py  update_complex_views.py
dev/: copy_tables.ipynb  cvm_tables copy.ipynb  explore_cvm_tables.py  ingest_1_download.ipynb  ingest_2_insert.ipynb  ingest_2_insert.py  ingest_tables.py  list_cad.ipynb  testando_lib_cvm copy.ipynb  testando_lib_cvm.ipynb  teste.ipynb
project1/: .gitignore  README.md  pyproject.toml  requirements.txt
site/: package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
tests/: sanity_check.py  verify_system.py
(+201 files in other folders)
