[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "fin-data-lab"
version = "0.1.0"
description = "Financial data lab: CVM, B3, PREVIC, SUSEP ingestion + modeling"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/yourusername/fin-data-lab"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
sqlalchemy = "^2.0.24"
sqlmodel = "^0.0.14"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
aiohttp = "^3.9.1"
requests = "^2.31.0"
pandas = "^2.1.3"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
xgboost = "^2.0.3"
APScheduler = "^3.10.4"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
selenium = "^4.15.2"
plotly = "^5.18.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[tool.poetry.dev-dependencies]
black = "^23.12.0"
isort = "^5.13.2"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pytest-cov = "^4.1.0"
ipython = "^8.18.1"
jupyter = "^1.0.0"

[tool.poetry.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
